Moved Salt-specific rootfs files to dedicated folder. make_salt.sh script allows to make the board recognized as Salt (by writing to ~/.bela/belaconfig). Fixed board_detect Makefile.

--- a/resources/tools/board_detect/Makefile
+++ b/resources/tools/board_detect/Makefile
@@ -1,5 +1,5 @@
 board_detect:
-	gcc main.cpp -I../../../include  board_detect.cpp -o board_detect
+	g++ main.cpp -I../../../include  board_detect.cpp -o board_detect
 
 install: board_detect
 	cp board_detect /usr/local/bin/
