--- a/resources/tools/board_detect/Makefile
+++ b/resources/tools/board_detect/Makefile
@@ -1,5 +1,21 @@
-board_detect:
-	g++ main.cpp -I../../../include  Spi_Codec.cpp I2c_Codec.cpp board_detect.cpp -o board_detect
+CC=g++
+BUILD=build
+$(shell mkdir -p build)
+OBJS = $(BUILD)/GPIOcontrol.o $(BUILD)/Spi_Codec.o $(BUILD)/I2c_Codec.o $(BUILD)/board_detect.o $(BUILD)/main.o
+
+CPPFLAGS=-I../../../include
+
+board_detect: $(OBJS)
+	$(CC) $(LDFLAGS) $(OBJS) $(LOADLIBES) -o "$@"
+
+clean:
+	rm -rf $(OBJS) board_detect
 
 install: board_detect
 	cp board_detect /usr/local/bin/
+
+$(BUILD)/main.o: main.cpp
+	$(CC) "$<" -c $(CPPFLAGS) $(CFLAGS) -o "$@" 
+
+$(BUILD)/%.o: ../../../core/%.cpp
+	$(CC) "$<" -c $(CPPFLAGS) $(CFLAGS) -o "$@" 
