Allow compiler to be overridden, fixed include path to have libraries/

--- a/Makefile.libraries
+++ b/Makefile.libraries
@@ -1,8 +1,8 @@
 # This should be called from the Bela folder, with 
 # make -f Makefile.libraries LIBRARY=libraryname
 # set defaults
-CC := clang
-CXX := clang++
+CC ?= clang
+CXX ?= clang++
 
 #TODO: these variables should actually be conditional and/or shared with the Base Makefile
 # although they are not really needed if this Makefile is called from the main Makefile
@@ -12,7 +12,7 @@ BELA_DIR := /root/Bela
 DEFAULT_COMMON_FLAGS := -O3 -march=armv7-a -mtune=cortex-a8 -mfloat-abi=hard -mfpu=neon -ftree-vectorize -ffast-math
 CXXFLAGS := $(DEFAULT_COMMON_FLAGS) -std=c++11 -Wno-varargs
 CFLAGS := $(DEFAULT_COMMON_FLAGS) -std=gnu11
-override CPPFLAGS := -I$(BELA_DIR)/include -DNDEBUG -D$(BELA_USE_DEFINE) -I$(BELA_DIR)/resources/$(DEBIAN_VERSION)/include
+override CPPFLAGS := -I$(BELA_DIR)/libraries -I$(BELA_DIR)/include -DNDEBUG -D$(BELA_USE_DEFINE) -I$(BELA_DIR)/resources/$(DEBIAN_VERSION)/include
 # the above default variables may be modified by the Makefile included here:
 MKFILE_COMPILE := libraries/$(LIBRARY)/build/Makefile.compile
 include $(MKFILE_COMPILE)
